--- a/sbin/isakmpd/isakmpd.policy.5
+++ b/sbin/isakmpd/isakmpd.policy.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: isakmpd.policy.5,v 1.17 2001/03/07 07:33:53 angelos Exp $
+.\" $OpenBSD: isakmpd.policy.5,v 1.18 2001/04/30 13:53:27 ho Exp $
 .\" $EOM: isakmpd.policy.5,v 1.24 2000/11/23 12:55:25 niklas Exp $
 .\"
 .\" Copyright (c) 1999, Angelos D. Keromytis.  All rights reserved.
@@ -601,14 +601,25 @@ Signature: "sig-x509-sha1-base64:ql+vrUxv14DcBOQHR2jsbXayq6T\\
             IcjzRv4khDws69FT3QfELjcpShvbLrXmh1Z00OFmxjyqDw="
 
 .Ed
-.Sh SEE ALSO
-.Xr ipsec 4 ,
-.Xr keynote 4 ,
-.Xr keynote 5 ,
-.Xr isakmpd 8
 .Sh BUGS
 remote_filter, local_filter, and remote_id are only set for IPv4
 addresses (single, range, or subnet), FQDN, and User FQDN.
 
 The \*_addr_upper and \*_addr_lower attributes are not currently set
 for IPv6 addresses (single, range, or subnet).
+.Sh FILES
+.Bl -tag -width /etc/isakmpd/isakmpd.policy
+.It Pa /etc/isakmpd/isakmpd.policy
+The default
+.Nm isakmpd
+policy configuration file.
+.It Pa /usr/share/ipsec/isakmpd/policy
+A sample
+.Nm isakmpd
+policy configuration file.
+.El
+.Sh SEE ALSO
+.Xr ipsec 4 ,
+.Xr keynote 4 ,
+.Xr keynote 5 ,
+.Xr isakmpd 8
