Simpler explanation of exit values.

--- a/bin/rmdir/rmdir.1
+++ b/bin/rmdir/rmdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rmdir.1,v 1.10 2000/10/18 06:55:10 aaron Exp $
+.\"	$OpenBSD: rmdir.1,v 1.11 2001/05/01 02:49:44 aaron Exp $
 .\"	$NetBSD: rmdir.1,v 1.10 1995/07/25 19:37:35 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -81,9 +81,9 @@ The
 utility exits with one of the following values:
 .Bl -tag -width Ds
 .It Li \&0
-Each directory entry specified by a dir operand
-referred to an empty directory and was removed
-successfully.
+Each
+.Ar directory
+argument referred to an empty directory and was removed successfully.
 .It Li \&>\&0
 An error occurred.
 .El
