--- a/usr.sbin/wsfontload/wsfontload.8
+++ b/usr.sbin/wsfontload/wsfontload.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wsfontload.8,v 1.6 2001/03/27 22:44:55 aaron Exp $
+.\"	$OpenBSD: wsfontload.8,v 1.7 2001/05/01 17:44:35 aaron Exp $
 .\"	$NetBSD: wsfontload.8,v 1.5 1999/04/06 04:54:22 cgd Exp $
 .\"
 .Dd January 13, 1999
@@ -67,8 +67,7 @@ for ISO-8859-1 encoding,
 for IBM encoded fonts, and
 .Dq pcvt
 for the custom encoding of the supplemental fonts which came with the BSD
-.Xr pcvt 4
-console driver.
+PCVT console driver.
 Per default,
 .Dq iso
 is assumed.
@@ -101,19 +100,12 @@ script, controlled by the
 configuration file.
 .Pp
 No font files are provided with the wscons framework.
-The fonts installed by
-.Xr pcvt 4
-can be used instead, as can raw font files from other operating system
-distributions.
+The fonts installed by PCVT can be used instead, as can raw font files from
+other operating system distributions.
 .Sh EXAMPLES
-The following examples demonstrate the functionality of
-.Nm wsfontload .
+.Cm "wsfontload -N myname -h 8 -e ibm /usr/share/misc/pcvtfonts/vt220l.808"
 .Pp
-.Dl wsfontload -N myname -h 8 -e ibm /usr/share/pcvt/fonts/vt220l.808
-.Pp
-Load the IBM-encoded 8x8-font from the
-.Xr pcvt 4
-distribution.
+Load the IBM-encoded 8x8-font from the PCVT distribution.
 This (or another 8x8-font) is necessary to use the 50-line screen type on
 .Xr vga 4
 displays.
