Remove completely redundant introductory sentences in ENVIRONMENT sections.

--- a/usr.bin/du/du.1
+++ b/usr.bin/du/du.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: du.1,v 1.14 2001/02/23 19:14:20 pjanzen Exp $
+.\"	$OpenBSD: du.1,v 1.15 2001/05/01 17:58:02 aaron Exp $
 .\"	$NetBSD: du.1,v 1.6 1996/10/18 07:20:31 thorpej Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -129,9 +129,6 @@ time per
 execution.
 .Sh ENVIRONMENT
 .Bl -tag -width BLOCKSIZE
-The following environment variables affect the execution of
-.Nm du :
-.Pp
 .It Ev BLOCKSIZE
 Block counts will be displayed in units of this size block, unless the
 .Fl k
