--- a/usr.bin/file/file.1
+++ b/usr.bin/file/file.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: file.1,v 1.13 2001/02/16 02:00:22 smart Exp $
+.\" $OpenBSD: file.1,v 1.14 2001/05/01 17:58:02 aaron Exp $
 .\" $FreeBSD: src/usr.bin/file/file.1,v 1.16 2000/03/01 12:19:39 sheldonh Exp $
 .Dd July 30, 1997
 .Dt FILE 1
@@ -148,9 +148,6 @@ Cause symlinks to be followed, as the like-named option in
 (on systems that support symbolic links).
 .El
 .Sh ENVIRONMENT
-The following environment varibles affect the execution of
-.Nm file :
-.Pp
 .Bl -tag -width indent
 .It Ev MAGIC
 Default magic number files.
