--- a/usr.bin/indent/indent.1
+++ b/usr.bin/indent/indent.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: indent.1,v 1.10 2001/01/08 07:14:42 pjanzen Exp $
+.\"	$OpenBSD: indent.1,v 1.11 2001/05/01 17:58:03 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.
@@ -490,8 +490,6 @@ In particular, the use of macros like:
 .Pp
 is handled properly.
 .Sh ENVIRONMENT
-The following environment variables affect the execution of
-.Nm indent :
 .Bl -tag -width Ds
 .It Ev HOME
 Used to locate the full path to
