--- a/usr.bin/sort/sort.1
+++ b/usr.bin/sort/sort.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sort.1,v 1.14 2001/02/04 21:27:01 ericj Exp $
+.\"	$OpenBSD: sort.1,v 1.15 2001/05/01 17:58:04 aaron Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -339,8 +339,6 @@ option.
 An error occurred.
 .El
 .Sh ENVIRONMENT
-The following environment variables affect the execution of
-.Nm sort :
 .Bl -tag -width Fl
 .It Ev TMPDIR
 Path in which to store temporary files.
