--- a/usr.bin/su/su.1
+++ b/usr.bin/su/su.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: su.1,v 1.10 2000/08/20 18:42:41 millert Exp $
+.\"	$OpenBSD: su.1,v 1.11 2001/05/01 17:58:04 aaron Exp $
 .\"
 .\" Copyright (c) 1988, 1990 The Regents of the University of California.
 .\" All rights reserved.
@@ -201,8 +201,6 @@ Pretend a login for user
 .Li foo .
 .El
 .Sh ENVIRONMENT
-The following environment variables affect the execution of
-.Nm su :
 .Bl -tag -width LOGNAME
 .It Ev HOME
 Default home directory of real user ID unless modified as
