--- a/usr.bin/tip/tip.1
+++ b/usr.bin/tip/tip.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tip.1,v 1.11 2001/04/12 22:52:47 millert Exp $
+.\"	$OpenBSD: tip.1,v 1.12 2001/05/01 17:58:05 aaron Exp $
 .\"	$NetBSD: tip.1,v 1.7 1994/12/08 09:31:05 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -463,8 +463,6 @@ of lines transferred during a file transfer operations,
 and more.
 .El
 .Sh ENVIRONMENT
-The following environment variables affect the execution of
-.Nm tip :
 .Bl -tag -width Fl
 .It Ev SHELL
 (str) The name of the shell to use for the
