--- a/usr.sbin/chroot/chroot.8
+++ b/usr.sbin/chroot/chroot.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: chroot.8,v 1.4 2000/08/17 15:28:36 mickey Exp $
+.\" $OpenBSD: chroot.8,v 1.5 2001/05/01 17:58:06 aaron Exp $
 .\"
 .\" Copyright (c) 1988, 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -32,7 +32,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)chroot.8	5.3 (Berkeley) 3/16/91
-.\"	$Id: chroot.8,v 1.4 2000/08/17 15:28:36 mickey Exp $
+.\"	$Id: chroot.8,v 1.5 2001/05/01 17:58:06 aaron Exp $
 .\"
 .Dd March 16, 1991
 .Dt CHROOT 8
@@ -57,8 +57,6 @@ Note,
 .Ar command
 or the shell are run as your real user ID.
 .Sh ENVIRONMENT
-The following environment variable is referenced by
-.Nm chroot :
 .Bl -tag -width SHELL
 .It Ev SHELL
 If set,
