--- a/share/man/man7/intro.7
+++ b/share/man/man7/intro.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.7,v 1.4 1999/05/23 14:11:09 aaron Exp $
+.\"	$OpenBSD: intro.7,v 1.5 2001/05/01 18:31:11 aaron Exp $
 .\"	$NetBSD: intro.7,v 1.3 1994/11/30 19:07:15 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993
@@ -58,8 +58,14 @@ Mail addressing description.
 Macros to typeset manual pages.
 .It Xr mdoc.samples
 Guide to writing manual pages.
+.It Xr mirroring-ports
+How to build a mirror for ports distfiles.
 .It Xr operator
 C operator precedence.
+.It Xr packages
+Overview of the binary package system.
+.It Xr packages-specs
+Binary package names specifications.
 .It Xr ports
 Contributed applications.
 .El
