--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.50 2001/01/18 04:46:03 itojun Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.51 2001/05/02 06:44:23 itojun Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -50,9 +50,12 @@
 .Oc
 .Op Ar parameters
 .Nm ifconfig
-.Ar gif-interface
-.Cm giftunnel
+.Ar tunnel-interface
+.Cm tunnel
 .Ar src_address dest_address
+.Nm ifconfig
+.Ar tunnel-interface
+.Cm deletetunnel
 .Nm ifconfig
 .Ar vlan-interface
 .Cm vlan
@@ -206,13 +209,16 @@ the system will not attempt to
 transmit messages through that interface.
 If possible, the interface will be reset to disable reception as well.
 This action automatically disables routes using the interface.
-.It Cm giftunnel
-Set the source and destination tunnel addresses on a
-.Xr gif 4
-interface.
+.It Cm tunnel Ar src_address dest_address
+Set the source and destination tunnel addresses on a tunnel interface,
+including
+.Xr gif 4 .
 Packets routed to this interface will be encapsulated in
 IPv4 or IPv6, depending on the source and destination address families.
 Both addresses must be of the same family.
+.It Cm deletetunnel
+Removes the source and dsetination tunnel addresses,
+configured onto a tunnel interface.
 .It Cm ipdst
 This is used to specify an Internet host who is willing to receive
 ip packets encapsulating NS packets bound for a remote network.
