plural for power management devices

--- a/share/man/man8/man8.i386/MAKEDEV.8
+++ b/share/man/man8/man8.i386/MAKEDEV.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: MAKEDEV.8,v 1.13 2001/01/27 22:53:43 brad Exp $
+.\"	$OpenBSD: MAKEDEV.8,v 1.14 2001/05/02 15:43:03 mickey Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
 .\"
@@ -156,7 +156,7 @@ loadable kernel modules interface
 .It Ar audio
 audio device
 .It Ar apm
-power management device
+power management devices
 .It Ar tun#
 network tunnel driver
 .It Ar joy#
