linux_lib -> redhat_base; pointed out by deraadt@

--- a/share/man/man8/compat_linux.8
+++ b/share/man/man8/compat_linux.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: compat_linux.8,v 1.15 2001/04/09 07:14:12 tholo Exp $
+.\"	$OpenBSD: compat_linux.8,v 1.16 2001/05/03 20:51:11 aaron Exp $
 .\"	$NetBSD: compat_linux.8,v 1.2 1995/10/16 20:17:59 fvdl Exp $
 .\"
 .\" Copyright (c) 1995 Frank van der Linden
@@ -80,11 +80,11 @@ do the necessary installation steps).
 You have access to the OpenBSD
 .Xr ports 7
 system.  Install the port named
-.Nm linux_lib
+.Nm redhat_base
 in the
 .Nm emulators
 category.  The
-.Nm linux_lib
+.Nm redhat_base
 port contains the shared libraries, binaries, and other related files
 necessary to run Linux applications.  Access to a Linux system is not
 needed.
