--- a/usr.bin/nc/nc.1
+++ b/usr.bin/nc/nc.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nc.1,v 1.11 2000/09/26 01:41:44 ericj Exp $
+.\"	$OpenBSD: nc.1,v 1.12 2001/05/04 01:38:31 millert Exp $
 .\"
 .\" Copyright (c) 1996 David Sacerdote
 .\" All rights reserved.
@@ -34,7 +34,6 @@
 .Sh SYNOPSIS
 .Nm nc
 .Op Fl lnrtuvz
-.Op Fl e Ar command
 .Op Fl g Ar intermediates
 .Op Fl G Ar hopcount
 .Op Fl i Ar interval
