--- a/lib/libkvm/kvm_getprocs.3
+++ b/lib/libkvm/kvm_getprocs.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: kvm_getprocs.3,v 1.7 2000/03/04 15:29:56 aaron Exp $
+.\"	$OpenBSD: kvm_getprocs.3,v 1.8 2001/05/05 00:28:36 angelos Exp $
 .\"	$NetBSD: kvm_getprocs.3,v 1.3 1996/05/20 16:58:03 mrg Exp $
 .\"
 .\" Copyright (c) 1992, 1993
@@ -70,8 +70,10 @@ The value of
 describes the filtering predicate as follows:
 .Pp
 .Bl -tag -width 20n -offset indent -compact
+.It Dv KERN_PROC_KTHREAD
+all processes (user-level plus kernel threads)
 .It Dv KERN_PROC_ALL
-all processes
+all user-level processes
 .It Dv KERN_PROC_PID
 processes with process ID
 .Fa arg
