--- a/sbin/isakmpd/isakmpd.conf.5
+++ b/sbin/isakmpd/isakmpd.conf.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: isakmpd.conf.5,v 1.51 2001/04/30 13:53:26 ho Exp $
+.\" $OpenBSD: isakmpd.conf.5,v 1.52 2001/05/05 00:49:38 angelos Exp $
 .\" $EOM: isakmpd.conf.5,v 1.57 2000/12/21 14:43:17 ho Exp $
 .\"
 .\" Copyright (c) 1998, 1999, 2000 Niklas Hallqvist.  All rights reserved.
@@ -153,6 +153,10 @@ The name of the file that contains
 .Xr KeyNote 4
 policies.
 The default is "/etc/isakmpd/isakmpd.policy".
+.It Em Default-Phase-2-Suites
+A list of Phase 2 suites that will be used when establishing dynamic
+SAs.
+If left unspecified, QM-ESP-3DES-SHA-PFS-SUITE is used as the default.
 .It Em Retransmits
 How many times should a message be retransmitted before giving up.
 .It Em Check-interval
