no hyphen in PowerPC.

--- a/share/man/man4/pchb.4
+++ b/share/man/man4/pchb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pchb.4,v 1.6 2000/10/23 07:12:13 deraadt Exp $
+.\"	$OpenBSD: pchb.4,v 1.7 2001/05/10 03:53:00 brad Exp $
 .\"
 .\" Copyright (c) 2000 Michael Shalayeff. All rights reserved.
 .\"
@@ -44,7 +44,7 @@ and sub-class
 .Nm Bridge Host
 are supported just as PCI attachment point.
 .Pp
-The Power-PC port supports several Apple and Motorola bridges.
+The PowerPC port supports several Apple and Motorola bridges.
 .Pp
 .Sh SEE ALSO
 .Xr intro 4 ,
