Typo; physial -> physical.

--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: top.1,v 1.16 2000/11/10 05:10:41 aaron Exp $
+.\"	$OpenBSD: top.1,v 1.17 2001/05/10 18:13:06 aaron Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
 .\"
@@ -299,7 +299,7 @@ the number of processes in each state
 (sleeping, running, starting, zombies, and stopped),
 and a percentage of time spent in each of the processor states
 (user, nice, system, and idle).
-It also includes information about physial and virtual memory allocation.
+It also includes information about physical and virtual memory allocation.
 .Pp
 The remainder of the screen displays information about individual
 processes.
