--- a/share/man/man4/man4.hp300/tc.4
+++ b/share/man/man4/man4.hp300/tc.4
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: tc.4,v 1.4 2000/12/15 14:31:20 aaron Exp $
+.\"	$OpenBSD: tc.4,v 1.5 2001/05/11 01:24:21 millert Exp $
 .\"
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
@@ -35,13 +35,13 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)tc.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)tc.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt TC 4 hp300
 .Os
 .Sh NAME
-.Nm \&tc
+.Nm tc
 .Nd
 .Tn HP98544
 98550 ``Topcat'' and ``Catseye'' device interface
@@ -176,8 +176,3 @@ specification.
 .Sh SEE ALSO
 .Xr ioctl 2 ,
 .Xr grf 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
