--- a/share/man/man4/man4.hp300/autoconf.4
+++ b/share/man/man4/man4.hp300/autoconf.4
@@ -1,6 +1,7 @@
-.\"	$OpenBSD: autoconf.4,v 1.2 2000/03/02 14:46:45 todd Exp $
-.\" Copyright (c) 1990, 1991 Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: autoconf.4,v 1.3 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -30,9 +31,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)autoconf.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)autoconf.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt AUTOCONF 4 hp300
 .Os
 .Sh NAME
@@ -135,8 +136,3 @@ The slave number comes from the address select switches on the interface card.
 .%T 4.3BSD for the HP300
 .%O in the distribution documentation package
 .Re
-.Sh HISTORY
-The
-.Nm autoconf
-feature
-.Ud -beta
