--- a/share/man/man4/man4.hp300/cons.4
+++ b/share/man/man4/man4.hp300/cons.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: cons.4,v 1.3 2000/03/02 14:46:45 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: cons.4,v 1.4 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)cons.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)cons.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt CONS 4 hp300
 .Os
 .Sh NAME
@@ -68,11 +70,6 @@ console in that order.
 .Sh SEE ALSO
 .Xr tty 4 ,
 .Xr reboot 8
-.Sh HISTORY
-The
-.Nm
-device
-.Ud
 .Sh BUGS
 You should be able to specify potential console devices at
 .Xr config 8
