--- a/share/man/man4/man4.hp300/ct.4
+++ b/share/man/man4/man4.hp300/ct.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: ct.4,v 1.3 2000/03/02 14:46:45 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: ct.4,v 1.4 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)ct.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)ct.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt CT 4 hp300
 .Os
 .Sh NAME
@@ -44,7 +46,7 @@
 .Tn CS/80
 cartridge tape interface
 .Sh SYNOPSIS
-.Cd "tape ct0 at hpib? slave ?"
+.Cd "ct* at hpibbus? slave ? punit ?"
 .Sh DESCRIPTION
 The cartridge tape interface as found in the 7912, 7914, 7946, 9144, 9145,
 and 88140 products provides a standard tape drive interface as described in
@@ -100,12 +102,7 @@ refer to streaming no-rewind interfaces.
 .Xr mt 1 ,
 .Xr tar 1 ,
 .Xr tp 1 ,
-.Xr mtio 4 .
-.Sh HISTORY
-The
-.Nm \&ct
-driver
-.Ud
+.Xr mtio 4
 .Sh BUGS
 Read and writes of less than 1024 bytes will not behave as expected.
 The 9145 device is currently treated as a 9144.
