--- a/share/man/man4/man4.hp300/dca.4
+++ b/share/man/man4/man4.hp300/dca.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: dca.4,v 1.2 2000/03/02 14:46:45 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: dca.4,v 1.3 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)dca.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)dca.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt DCA 4 hp300
 .Os
 .Sh NAME
@@ -44,7 +46,7 @@
 .Tn HP 98644A
 communications interface
 .Sh SYNOPSIS
-.Cd "device dca0 at scode9 flags 0x1"
+.Cd "dca0 at dio? scode 9 flags 1"
 .Sh DESCRIPTION
 The
 .Tn 98644A
@@ -67,6 +69,7 @@ with carrier always present or 0 if modem control is desired.
 .Sh FILES
 .Bl -tag -width Pa
 .It Pa /dev/tty0
+.It Pa /dev/cua0
 .El
 .Sh DIAGNOSTICS
 .Bl -diag
@@ -77,11 +80,6 @@ has overflowed and incoming data has been lost.
 .El
 .Sh SEE ALSO
 .Xr tty 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
 .Sh BUGS
 Data loss is possible on busy systems with baud rates greater than 300.
 The
