--- a/share/man/man4/man4.hp300/dcl.4
+++ b/share/man/man4/man4.hp300/dcl.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: dcl.4,v 1.4 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: dcl.4,v 1.5 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)dcl.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)dcl.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt DCL 4 hp300
 .Os
 .Sh NAME
@@ -44,7 +46,7 @@
 .Tn HP
 98628A communications link
 .Sh SYNOPSIS
-.Cd "device dcl0 at scode? flags 0x1"
+.Cd "dcl0 at dio? scode ? flags 1"
 .Sh DESCRIPTION
 The 98628A is a buffered
 .Tn EIA
@@ -91,6 +93,7 @@ than 256 will improve performance marginally.
 .Sh FILES
 .Bl -tag -width /dev/ttyl[0-9] -compact
 .It Pa /dev/ttyl[0-9]
+.It Pa /dev/cual[0-9]
 .El
 .Sh DIAGNOSTICS
 .Bl -diag
@@ -113,13 +116,8 @@ Where the errors are encoded:
 .El
 .Sh SEE ALSO
 .Xr tty 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
 .Sh BUGS
-Breaks received at a faster rate then 1 break every second will be
+Breaks received at a rate faster than 1 break every second will be
 recognized as a single break.
 .Pp
 Console use is not supported.
