--- a/share/man/man4/man4.hp300/dcm.4
+++ b/share/man/man4/man4.hp300/dcm.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: dcm.4,v 1.3 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: dcm.4,v 1.4 2001/05/11 01:24:19 millert Exp $
+.\
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)dcm.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)dcm.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt DCM 4 hp300
 .Os
 .Sh NAME
@@ -44,7 +46,7 @@
 .Tn HP
 98642A communications multiplexer
 .Sh SYNOPSIS
-.Cd "device dcm0 at scode? flags 0xe"
+.Cd "dcm* at dio? scode ? flags 0xe"
 .Sh DESCRIPTION
 The
 .Tn 98642A
@@ -80,6 +82,7 @@ the interrupt rate drops.
 .Sh FILES
 .Bl -tag -width /dev/tty0[0-9a-f] -compact
 .It Pa /dev/tty0[0-9a-f]
+.It Pa /dev/cua0[0-9a-f]
 .El
 .Sh DIAGNOSTICS
 .Bl -diag
@@ -93,11 +96,6 @@ overflowed.
 .El
 .Sh SEE ALSO
 .Xr tty 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
 .Sh BUGS
 Total throughput per card, all ports together, is limited to 76800 bits per
 second continuous input rate.
