--- a/share/man/man4/man4.hp300/grf.4
+++ b/share/man/man4/man4.hp300/grf.4
@@ -1,11 +1,12 @@
-.\"	$OpenBSD: grf.4,v 1.4 2000/12/15 14:31:20 aaron Exp $
+.\"	$OpenBSD: grf.4,v 1.5 2001/05/11 01:24:20 millert Exp $
 .\"
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -34,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)grf.4	5.3 (Berkeley) 7/31/91
+.\"     from: @(#)grf.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd July 31, 1991
+.Dd June 9, 1993
 .Dt GRF 4 hp300
 .Os
 .Sh NAME
@@ -208,8 +209,3 @@ Invalid ioctl specification.
 .Xr hil 4 ,
 .Xr rb 4 ,
 .Xr tc 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
