--- a/share/man/man4/man4.hp300/hd.4
+++ b/share/man/man4/man4.hp300/hd.4
@@ -1,10 +1,12 @@
-.\"	$OpenBSD: rd.4,v 1.3 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: hd.4,v 1.1 2001/05/11 01:24:20 millert Exp $
+.\"
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
 .\" Science Department.
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -33,19 +35,18 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)rd.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)rd.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt RD 4 hp300
 .Os
 .Sh NAME
-.Nm rd
+.Nm hd
 .Nd
 .Tn CS/80
 disk interface
 .Sh SYNOPSIS
-.Cd "master hpib? at scode?"
-.Cd "disk rd? at hpib? slave?"
+.Cd "hd* at hpibbus? slave ? punit ?"
 .Sh DESCRIPTION
 This is a generic
 .Tn CS/80
@@ -60,7 +61,7 @@ It is a typical block-device driver; see
 The script
 .Xr MAKEDEV 8
 should be used to create the
-.Nm rd
+.Nm hd
 special files; consult
 .Xr mknod 8
 if a special file needs to be made manually.
@@ -76,9 +77,9 @@ The driver recognizes the following drives:
 and 9122,
 not all of which have been tested.
 Special file names begin with
-.Sq Li rd
+.Sq Li hd
 and
-.Sq Li rrd
+.Sq Li rhd
 for the block and character files respectively. The second
 component of the name, a drive unit number in the range of zero to
 seven, is represented by a
@@ -99,157 +100,157 @@ partitions for these drives:
 .Bl -column header diskx undefined length
 .Tn 7945/7946 No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	112	15904	1-142
-	rd?b	16016	20160	143-322
-	rd?c	0	108416	0-967
-	rd?d	16016	40320	143-502
-	rd?e	undefined
-	rd?f	undefined
-	rd?g	36176	72240	323-967
-	rd?h	56336	52080	503-967
+	hd?a	112	15904	1-142
+	hd?b	16016	20160	143-322
+	hd?c	0	108416	0-967
+	hd?d	16016	40320	143-502
+	hd?e	undefined
+	hd?f	undefined
+	hd?g	36176	72240	323-967
+	hd?h	56336	52080	503-967
 
 .Tn 9134D No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	96	15936	1-166
-	rd?b	16032	13056	167-302
-	rd?c	0	29088	0-302
-	rd?d	undefined
-	rd?e	undefined
-	rd?f	undefined
-	rd?g	undefined
-	rd?h	undefined
+	hd?a	96	15936	1-166
+	hd?b	16032	13056	167-302
+	hd?c	0	29088	0-302
+	hd?d	undefined
+	hd?e	undefined
+	hd?f	undefined
+	hd?g	undefined
+	hd?h	undefined
 
 .Tn 9122S No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	undefined
-	rd?b	undefined
-	rd?c	0	1232	0-76
-	rd?d	undefined
-	rd?e	undefined
-	rd?f	undefined
-	rd?g	undefined
-	rd?h	undefined
+	hd?a	undefined
+	hd?b	undefined
+	hd?c	0	1232	0-76
+	hd?d	undefined
+	hd?e	undefined
+	hd?f	undefined
+	hd?g	undefined
+	hd?h	undefined
 
 .Tn 7912P No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	0	15904	0-70
-	rd?b	16128	22400	72-171
-	rd?c	0	128128	0-571
-	rd?d	16128	42560	72-261
-	rd?e	undefined
-	rd?f	undefined
-	rd?g	38528	89600	172-571
-	rd?h	58688	69440	262-571
+	hd?a	0	15904	0-70
+	hd?b	16128	22400	72-171
+	hd?c	0	128128	0-571
+	hd?d	16128	42560	72-261
+	hd?e	undefined
+	hd?f	undefined
+	hd?g	38528	89600	172-571
+	hd?h	58688	69440	262-571
 
 .Tn 7914CT/P No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	224	15904	1-71
-	rd?b	16128	40320	72-251
-	rd?c	0	258048	0-1151
-	rd?d	16128	64960	72-361
-	rd?e	81088	98560	362-801
-	rd?f	179648	78400	802-1151
-	rd?g	56448	201600	252-1151
-	rd?h	81088	176960	362-1151
+	hd?a	224	15904	1-71
+	hd?b	16128	40320	72-251
+	hd?c	0	258048	0-1151
+	hd?d	16128	64960	72-361
+	hd?e	81088	98560	362-801
+	hd?f	179648	78400	802-1151
+	hd?g	56448	201600	252-1151
+	hd?h	81088	176960	362-1151
 
 .Tn 7958A No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	252	16128	1-64
-	rd?b	16380	32256	65-192
-	rd?c	0	255276	0-1012
-	rd?d	16380	48384	65-256
-	rd?e	64764	100800	257-656
-	rd?f	165564	89712	657-1012
-	rd?g	48636	206640	193-1012
-	rd?h	64764	190512	257-1012
+	hd?a	252	16128	1-64
+	hd?b	16380	32256	65-192
+	hd?c	0	255276	0-1012
+	hd?d	16380	48384	65-256
+	hd?e	64764	100800	257-656
+	hd?f	165564	89712	657-1012
+	hd?g	48636	206640	193-1012
+	hd?h	64764	190512	257-1012
 
 .Tn 7957A No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	154	16016	1-104
-	rd?b	16170	24640	105-264
-	rd?c	0	159544	0-1035
-	rd?d	16170	42350	105-379
-	rd?e	58520	54824	380-735
-	rd?f	113344	46200	736-1035
-	rd?g	40810	118734	265-1035
-	rd?h	58520	101024	380-1035
+	hd?a	154	16016	1-104
+	hd?b	16170	24640	105-264
+	hd?c	0	159544	0-1035
+	hd?d	16170	42350	105-379
+	hd?e	58520	54824	380-735
+	hd?f	113344	46200	736-1035
+	hd?g	40810	118734	265-1035
+	hd?h	58520	101024	380-1035
 
 .Tn 7933H No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	598	16146	1-27
-	rd?b	16744	66976	28-139
-	rd?c	0	789958	0-1320
-	rd?d	83720	16146	140-166
-	rd?e	99866	165646	167-443
-	rd?f	265512	165646	444-720
-	rd?g	83720	706238	140-1320
-	rd?h	431158	358800	721-1320
+	hd?a	598	16146	1-27
+	hd?b	16744	66976	28-139
+	hd?c	0	789958	0-1320
+	hd?d	83720	16146	140-166
+	hd?e	99866	165646	167-443
+	hd?f	265512	165646	444-720
+	hd?g	83720	706238	140-1320
+	hd?h	431158	358800	721-1320
 
 .Tn 9134L No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	80	15920	1-199
-	rd?b	16000	20000	200-449
-	rd?c	0	77840	0-972
-	rd?d	16000	32000	200-599
-	rd?e	undefined
-	rd?f	undefined
-	rd?g	36000	41840	450-972
-	rd?h	48000	29840	600-972
+	hd?a	80	15920	1-199
+	hd?b	16000	20000	200-449
+	hd?c	0	77840	0-972
+	hd?d	16000	32000	200-599
+	hd?e	undefined
+	hd?f	undefined
+	hd?g	36000	41840	450-972
+	hd?h	48000	29840	600-972
 
 .Tn 7936H No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	861	16359	1-19
-	rd?b	17220	67158	20-97
-	rd?c	0	600978	0-697
-	rd?d	84378	16359	98-116
-	rd?e	100737	120540	117-256
-	rd?f	220416	120540	256-395
-	rd?g	84378	516600	98-697
-	rd?h	341817	259161	397-697
+	hd?a	861	16359	1-19
+	hd?b	17220	67158	20-97
+	hd?c	0	600978	0-697
+	hd?d	84378	16359	98-116
+	hd?e	100737	120540	117-256
+	hd?f	220416	120540	256-395
+	hd?g	84378	516600	98-697
+	hd?h	341817	259161	397-697
 
 .Tn 7937H No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	1599	15990	1-10
-	rd?b	17589	67158	11-52
-	rd?c	0	1116102	0-697
-	rd?d	84747	15990	53-62
-	rd?e	100737	246246	63-216
-	rd?f	346983	246246	217-370
-	rd?g	84747	1031355	53-697
-	rd?h	593229	522873	371-697
+	hd?a	1599	15990	1-10
+	hd?b	17589	67158	11-52
+	hd?c	0	1116102	0-697
+	hd?d	84747	15990	53-62
+	hd?e	100737	246246	63-216
+	hd?f	346983	246246	217-370
+	hd?g	84747	1031355	53-697
+	hd?h	593229	522873	371-697
 
 .Tn 7957B/7961B No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	126	16002	1-127
-	rd?b	16128	32760	128-387
-	rd?c	0	159894	0-1268
-	rd?d	16128	49140	128-517
-	rd?e	65268	50400	518-917
-	rd?f	115668	44226	918-1268
-	rd?g	48888	111006	388-1268
-	rd?h	65268	94626	518-1268
+	hd?a	126	16002	1-127
+	hd?b	16128	32760	128-387
+	hd?c	0	159894	0-1268
+	hd?d	16128	49140	128-517
+	hd?e	65268	50400	518-917
+	hd?f	115668	44226	918-1268
+	hd?g	48888	111006	388-1268
+	hd?h	65268	94626	518-1268
 
 .Tn 7958B/7962B No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	378	16254	1-43
-	rd?b	16632	32886	44-130
-	rd?c	0	297108	0-785
-	rd?d	16632	49140	44-173
-	rd?e	65772	121716	174-495
-	rd?f	187488	109620	496-785
-	rd?g	49518	247590	131-785
-	rd?h	65772	231336	174-785
+	hd?a	378	16254	1-43
+	hd?b	16632	32886	44-130
+	hd?c	0	297108	0-785
+	hd?d	16632	49140	44-173
+	hd?e	65772	121716	174-495
+	hd?f	187488	109620	496-785
+	hd?g	49518	247590	131-785
+	hd?h	65772	231336	174-785
 
 .Tn 7959B/7963B No partitions:
 .Sy	disk	start	length	cyls
-	rd?a	378	16254	1-43
-	rd?b	16632	49140	44-173
-	rd?c	0	594216	0-1571
-	rd?d	16632	65772	44-217
-	rd?e	82404	303912	218-1021
-	rd?f	386316	207900	1022-1571
-	rd?g	65772	528444	174-1571
-	rd?h	82404	511812	218-1571
+	hd?a	378	16254	1-43
+	hd?b	16632	49140	44-173
+	hd?c	0	594216	0-1571
+	hd?d	16632	65772	44-217
+	hd?e	82404	303912	218-1021
+	hd?f	386316	207900	1022-1571
+	hd?g	65772	528444	174-1571
+	hd?h	82404	511812	218-1571
 .El
 .Pp
 The eight partitions as given support four basic, non-overlapping layouts,
@@ -259,50 +260,45 @@ In the first layout there are three partitions and a ``bootblock'' area.
 The bootblock area is at the beginning of the disk and holds
 the standalone disk boot program.
 The
-.Pa rd?a
+.Pa hd?a
 partition is for the root file system,
-.Pa rd?b
+.Pa hd?b
 is a paging/swapping area, and
-.Pa rd?g
+.Pa hd?g
 is for everything else.
 .Pp
 The second layout is the same idea,
 but has a larger paging/swapping partition
-.Pq Pa rd?d
+.Pq Pa hd?d
 and
 a smaller ``everything else'' partition
-.Pq Pa rd?h .
+.Pq Pa hd?h .
 This layout is better for environments which run many large processes.
 .Pp
 The third layout is a variation of the second,
 but breaks the
-.Pa rd?h
+.Pa hd?h
 partition into two partitions,
-.Pa rd?e
+.Pa hd?e
 and
-.Pa rd?f .
+.Pa hd?f .
 .Pp
 The final layout is intended for a large, single file system second disk.
 It is also used when writing out the boot program since it is the only
 partition mapping the bootblock area.
 .Sh FILES
-.Bl -tag -width /dev/rrd[0-7][a-h] -compact
-.It Pa /dev/rd[0-7][a-h]
+.Bl -tag -width /dev/rhd[0-7][a-h] -compact
+.It Pa /dev/hd[0-7][a-h]
 block files
-.It Pa /dev/rrd[0-7][a-h]
+.It Pa /dev/rhd[0-7][a-h]
 raw files
 .El
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "rd%d err: v%d u%d, R0x%x F0x%x A0x%x I0x%x, block %d"
+.It "hd%d err: v%d u%d, R0x%x F0x%x A0x%x I0x%x, block %d"
 An unrecoverable data error occurred during transfer of the
 specified block on the specified disk.
 .El
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
 .Sh BUGS
 The current disk partitioning is totally bogus.
 .Tn CS/80
