--- a/share/man/man4/man4.hp300/hil.4
+++ b/share/man/man4/man4.hp300/hil.4
@@ -1,6 +1,7 @@
-.\"	$OpenBSD: hil.4,v 1.3 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: hil.4,v 1.4 2001/05/11 01:24:20 millert Exp $
+.\"
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
@@ -34,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)hil.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)hil.4	8.2 (Berkeley) 11/30/93
 .\"
-.Dd March 27, 1991
+.Dd November 30, 1993
 .Dt HIL 4 hp300
 .Os
 .Sh NAME
@@ -224,7 +225,7 @@ ioctl.
 .It Dv HILIOCAROFF
 Disable Auto Repeat
 .Pp
-Turn off auto repeat on the keyboard while it is cooked mode.
+Turn off auto repeat on the keyboard while it is in cooked mode.
 Identical to the
 .Tn HP-UX
 .Dv HILDKR
@@ -373,8 +374,3 @@ specification.
 .It Bq Er EMFILE
 No more shared queues available.
 .El
-.Sh HISTORY
-The
-.Nm
-interface
-.Ud
