--- a/share/man/man4/man4.hp300/intro.4
+++ b/share/man/man4/man4.hp300/intro.4
@@ -1,6 +1,7 @@
-.\"	$OpenBSD: intro.4,v 1.3 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: intro.4,v 1.4 2001/05/11 01:24:20 millert Exp $
+.\"
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -30,9 +31,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)intro.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)intro.4	8.1 (Berkeley) 6/5/93
 .\"
-.Dd March 27, 1991
+.Dd June 5, 1993
 .Dt INTRO 4 hp300
 .Os
 .Sh NAME
@@ -95,9 +96,7 @@ The autoconfiguration system is described in
 A list of the supported devices is given below.
 .Sh SEE ALSO
 .Xr autoconf 4 ,
-.Xr intro 4 ,
-.Xr intro 4 ,
-.Xr config 8 .
+.Xr config 8
 .Rs
 .%T "Building 4.3 BSD UNIX Systems with Config (SMM:2)"
 .Re
