--- a/share/man/man4/man4.hp300/ite.4
+++ b/share/man/man4/man4.hp300/ite.4
@@ -1,6 +1,7 @@
-.\"	$OpenBSD: ite.4,v 1.3 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: ite.4,v 1.4 2001/05/11 01:24:20 millert Exp $
+.\"
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
@@ -34,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)ite.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)ite.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt ITE 4 hp300
 .Os
 .Sh NAME
@@ -164,8 +165,3 @@ None under
 .Xr hil 4 ,
 .Xr rb 4 ,
 .Xr tc 4
-.Sh HISTORY
-The
-.Nm
-driver
-.Ud
