--- a/share/man/man4/man4.hp300/ppi.4
+++ b/share/man/man4/man4.hp300/ppi.4
@@ -1,6 +1,7 @@
-.\"	$OpenBSD: ppi.4,v 1.2 2000/03/02 14:46:46 todd Exp $
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\"	$OpenBSD: ppi.4,v 1.3 2001/05/11 01:24:20 millert Exp $
+.\"
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
@@ -34,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)ppi.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)ppi.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt PPI 4 hp300
 .Os
 .Sh NAME
@@ -45,7 +46,7 @@
 .Tn HP-IB
 printer/plotter interface
 .Sh SYNOPSIS
-.Cd "device ppi0 at hpib0 slave 5"
+.Cd "ppi0 at hpibbus0 slave 5 punit 0"
 .Sh DESCRIPTION
 The
 .Nm ppi
@@ -70,12 +71,7 @@ The device files appear as follows:
 .Sh DIAGNOSTICS
 None.
 .Sh SEE ALSO
-.Xr hpib 4 .
-.Sh HISTORY
-The
-.Nm
-interface
-.Ud
+.Xr hpib 4
 .Sh BUGS
 This driver is very primitive, it handshakes data out byte by byte.
 It should use
