--- a/share/man/man4/man4.hp300/rb.4
+++ b/share/man/man4/man4.hp300/rb.4
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: rb.4,v 1.3 2000/12/15 14:31:20 aaron Exp $
+.\"	$OpenBSD: rb.4,v 1.4 2001/05/11 01:24:20 millert Exp $
 .\"
-.\" Copyright (c) 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1990, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" This code is derived from software contributed to Berkeley by
 .\" the Systems Programming Group of the University of Utah Computer
@@ -35,9 +35,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     from: @(#)rb.4	5.2 (Berkeley) 3/27/91
+.\"     from: @(#)rb.4	8.1 (Berkeley) 6/9/93
 .\"
-.Dd March 27, 1991
+.Dd June 9, 1993
 .Dt RB 4 hp300
 .Os
 .Sh NAME
@@ -165,14 +165,9 @@ Invalid ioctl specification.
 .El
 .Sh SEE ALSO
 .Xr ioctl 2 ,
-.Xr grf 4 .
+.Xr grf 4
 .Pp
 For extensive code examples using the
 Renaissance, see the X device dependent source.
-.Sh HISTORY
-The
-.Nm
-interface
-.Ud
 .Sh BUGS
 Not tested for all configurations of scan board and frame buffer memory boards.
