o We don't have a dcl device o Both dcm and dca support 38400 baud

--- a/share/man/man4/man4.hp300/dcm.4
+++ b/share/man/man4/man4.hp300/dcm.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dcm.4,v 1.4 2001/05/11 01:24:19 millert Exp $
+.\"	$OpenBSD: dcm.4,v 1.5 2001/05/11 01:44:37 millert Exp $
 .\
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -61,7 +61,7 @@ multiplexer. The
 has three direct-connect ports and one port with
 full modem control.
 .Pp
-Input and output for each line may set to one of following baud rates;
+Input and output for each line may set to one of following baud rates:
 50, 75, 110, 134.5, 150, 300, 600, 1200, 1800, 2400, 4800,
 9600, 19200, 38400.
 .Pp
