--- a/share/man/man4/man4.hp300/dca.4
+++ b/share/man/man4/man4.hp300/dca.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dca.4,v 1.3 2001/05/11 01:24:19 millert Exp $
+.\"	$OpenBSD: dca.4,v 1.4 2001/05/11 01:44:36 millert Exp $
 .\
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -58,9 +58,9 @@ is a single port
 communications interface with a single character buffer.
 Such an interface is built-in to all series 300 machines.
 .Pp
-Input and output for each line may set to one of following baud rates;
-50, 75, 110, 134.5, 150, 300, 600, 1200, 1800, 2400, 4800, 9600 or
-19200.
+Input and output for each line may set to one of following baud rates:
+50, 75, 110, 134.5, 150, 300, 600, 1200, 1800, 2400, 4800, 9600,
+19200, 38400.
 .Pp
 An optional argument
 .Ar flags
